fixing style, fixed full name not showing in comment, update translations

--- a/src/index.scss
+++ b/src/index.scss
@@ -252,7 +252,7 @@ header {
 }
 
 .border-2 {
-  border: 2px solid #cccccc !important;
+  border: 2px solid #cccccc ;
   border-width: 2px !important;
 }
 
